Create read_uifc_ini() for a common method of reading UIFC/CIOLIB .ini files
Copied from read_scfg_ini() in scfg.c

--- a/src/uifc/uifc.vcxproj
+++ b/src/uifc/uifc.vcxproj
@@ -123,6 +123,7 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="uifc_ini.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
