Add new rainbow attribute key
If this key doesn't exist, the default value is used

So it's not a big deal if your ctrl/attr.ini file is missing or doesn't have
any particular key in it.

--- a/ctrl/attr.ini
+++ b/ctrl/attr.ini
@@ -19,3 +19,5 @@ votes_full        = WH5					; Votes Full
 votes_empty       = WH					; Votes Empty
 progress_complete = WH5					; Progress Complete
 progress_empty    = WH					; Progress Incomplete
+; Rainbow attribute configuration, up to 40 attributes, comma-separated:
+rainbow = WH,W,CH,C,MH,M,BH,B,YH,Y,GH,G,RH,R,KH
