More MRC changes.
js-connector.js - fixed a typo.
Added ssl config examples to mrc-connector.examples.ini
Added show_nicks to js-client.js and js-client.example.ini
For Keyop. This allows the sysop to turn nick lists on when
connecting to MRC.

--- a/xtrn/mrc/mrc-client.example.ini
+++ b/xtrn/mrc/mrc-client.example.ini
@@ -8,3 +8,7 @@ motd = true
 banners = true
 
 [aliases]
+
+[client]
+;change this to true if you want show the nick list on connect.
+show_nicks=false
