--- a/xtrn/mrc/mrc-connector.example.ini
+++ b/xtrn/mrc/mrc-connector.example.ini
@@ -1,5 +1,8 @@
 server = mrc.bottomlessabyss.net
 port = 5000
+;use port 5001 if you want SSL and uncomment ssl=true
+;port = 5001
+;ssl=true
 timeout = 10
 ping_interval = 60
 reconnect_delay = 30
