DDMsgReader: New msgSaveDir option to specify a default dir to save messages to (for the sysop)

--- a/xtrn/DDMsgReader/DDMsgReader.cfg
+++ b/xtrn/DDMsgReader/DDMsgReader.cfg
@@ -96,5 +96,8 @@ indexedModeMenuSnapToNextWithNewAftarMarkAllRead=true
 ; the user if they want to delete a message after replying to it
 promptDelPersonalEmailAfterReply=false
 
+; The default directory on the BBS machine to save messages to (for the sysop)
+msgSaveDir=
+
 ; The theme file name (for colors, strings, etc.)
 themeFilename=DefaultTheme.cfg
