Fix the HobbyNet entry: Zone 954 is not a FidoNet (proper) address
Apparently, Mike Dippel's actual FidoNet address is 3:712/1321.5

--- a/exec/init-fidonet.ini
+++ b/exec/init-fidonet.ini
@@ -256,7 +256,8 @@ info  = https://hobbynet.hobbyline.com/
 pack  = https://hobbynet.hobbyline.com/docs/HOBBYNET.ZIP
 coord = Mike Dippel
 email = mdippel@hobbyline.com
-fido  = 954:895/2
+fido  = 3:712/1321.5
+addr  = 954:895/2
 echolist = HOBBYNET.NA
 areatag_prefix = HNET_
 
