Apparently ar can't update this when it's fat.
Hopefully this is the only lib like this (maybe the resources?)

--- a/src/conio/GNUmakefile
+++ b/src/conio/GNUmakefile
@@ -50,8 +50,10 @@ endif
 
 # CIOLIB Library Link Rule
 $(CIOLIB-MT_BUILD): $(MTOBJODIR) $(OBJS) $(CIOLIB_INTERPOLATE_TARGET)
-
 	@echo Creating $@ ...
+ifdef FAT
+	$(QUIET)$(DELETE) $@
+endif
 	$(QUIET)$(AR) rc $@ $(OBJS)
 	$(QUIET)$(RANLIB) $@
 
