clang 16.0.0 crashes when building JS... unhook from builds.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,7 @@ include:
       platform: 'x86'
       tagname: 'macOS'
       gnu_make: 'make'
+      no_javascript: 'yes'
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
 smoketest-jsexec-linux:
