As it turns out, ciolib isn't special.
We can't update a fat static library using ar on macOS. :(

--- a/src/encode/GNUmakefile
+++ b/src/encode/GNUmakefile
@@ -12,6 +12,9 @@ CFLAGS += -I$(ENCODE_SRC) $(XPDEV_CFLAGS)
 # ENCODE Library Link Rule
 $(ENCODE_BUILD): $(OBJODIR) $(OBJS)
 	@echo Creating $@ ...
+ifdef FAT
+	$(QUIET)$(DELETE) $@
+endif
 	$(QUIET)$(AR) rc $@ $(OBJS)
 	$(QUIET)$(RANLIB) $@
 
