--- a/src/uifc/GNUmakefile
+++ b/src/uifc/GNUmakefile
@@ -22,6 +22,9 @@ CFLAGS += -I$(XPDEV_SRC) $(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS)
 # MT-UIFC Library Link Rule
 $(UIFCLIB-MT_BUILD): $(MT_OBJS) | $(MTOBJODIR) $(LIBODIR)
 	@echo Creating $@ ...
+ifdef FAT
+	$(QUIET)$(DELETE) $@
+endif
 	$(QUIET)$(AR) rc $@ $(MT_OBJS)
 	$(QUIET)$(RANLIB) $@
 
