Fixups for build changes.
Sneaky hiding extra interesting bits at the end like that. :(

--- a/src/xpdev/GNUmakefile
+++ b/src/xpdev/GNUmakefile
@@ -15,6 +15,7 @@ ifndef NO_PULSEAUDIO
  endif
 endif
 
+CFLAGS +=  -I. $(XPDEV_CFLAGS)
 ifndef WITHOUT_ALSA_SOUND
 	ifeq ($(shell if [ -f /usr/include/alsa/asoundlib.h ] ; then echo YES ; fi),YES)
 		CFLAGS	+=	-DUSE_ALSA_SOUND
