Fix CMake system for SyncTERM

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -13,6 +13,9 @@ if(NOT WIN32)
 	find_package(Curses)
 	find_package(PkgConfig)
 	pkg_check_modules(SDL2 sdl2)
+	pkg_check_modules(XRENDER xrender)
+	pkg_check_modules(XINERAMA xinerama)
+	pkg_check_modules(XRANDR xrandr)
 endif()
 
 set(SOURCE
@@ -95,6 +98,15 @@ endif()
 
 if(X11_FOUND)
 	target_include_directories(ciolib PRIVATE ${X11_INCLUDE_DIR})
+	if(XRENDER_FOUND)
+		target_compile_definitions(ciolib PUBLIC WITH_XRENDER)
+	endif()
+	if(XINERAMA_FOUND)
+		target_compile_definitions(ciolib PUBLIC WITH_XINERAMA)
+	endif()
+	if(XRANDR_FOUND)
+		target_compile_definitions(ciolib PUBLIC WITH_XRANDR)
+	endif()
 else()
 	target_compile_definitions(ciolib PRIVATE NO_X)
 endif()
