--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -1,6 +1,5 @@
+cmake_minimum_required(VERSION 3.5)
 project (SyncTERM C)
-
-cmake_minimum_required(VERSION 2.8.11)
 
 # CPack stuff...
 set(CPACK_PACKAGE_NAME SyncTERM)
@@ -24,59 +23,80 @@ INCLUDE (../build/SynchronetMacros.cmake)
 INCLUDE (CheckIncludeFiles)
 
 set(SOURCE
-	uifc32.c
-	uifcx.c
-)
-
-set(SOURCE
 	bbslist.c
-	uifcinit.c
-	../uifc/filepick.c
-	fonts.c
-	rlogin.c
-	telnet_io.c
-	conn_telnet.c
 	conn.c
-	../sbbs3/telnet.c
-	term.c
-	window.c
+	conn_pty.c
+	conn_telnet.c
+	fonts.c
 	menu.c
-	../smblib/crc16.c
-	../smblib/crc32.c
+	modem.c
+	ooii.c
+	ooii_bmenus.c
+	ooii_cmenus.c
+	ooii_logons.c
+	ooii_sounds.c
+	ripper.c
+	rlogin.c
+	ssh.c
+	syncterm.c
+	telnet_io.c
+	telnets.c
+	term.c
+	uifcinit.c
+	window.c
+	../sbbs3/telnet.c
 	../sbbs3/zmodem.c
 	../sbbs3/xmodem.c
-	syncterm.c
-	ooii.c
-	ooii_logons.c
-	ooii_cmenus.c
-	ooii_bmenus.c
-	ooii_sounds.c
-	modem.c
-	conn_pty.c
 )
 
-if(WIN32)
-	list(APPEND CMAKE_REQUIRED_INCLUDES ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/win32.release/cryptlib/include)
-endif()
-
-CHECK_INCLUDE_FILES(cryptlib.h HAS_CRYPTLIB_H)
-if(HAS_CRYPTLIB_H)
-	list(APPEND SOURCE ssh.c)
+if(NOT WIN32)
+	find_program(3RDP_GNU_MAKE
+		NAMES gmake make
+	)
+	if(${3RDP_GNU_MAKE} STREQUAL "3RDP_GNU_MAKE-NOTFOUND")
+		set(WITHOUT_CRYPTLIB 1)
+	else()
+		if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+			set(BUILD_TYPE_FLAG DEBUG=1)
+		else()
+			set(BUILD_TYPE_FLAG RELEASE=1)
+		endif()
+		execute_process(
+			COMMAND ${3RDP_GNU_MAKE} -C ${CMAKE_CURRENT_SOURCE_DIR}/../build --no-print-directory DONT_CLOBBER_CC=please ${BUILD_TYPE_FLAG}
+			OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/paths.txt
+			ERROR_FILE ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/paths.err
+		)
+		file(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/paths.txt PATHS)
+		list(GET PATHS 0 LEGACY_LIBDIR)
+		list(GET PATHS 1 LEGACY_OBJDIR)
+		list(GET PATHS 2 LEGACY_MTOBJBDIR)
+		list(GET PATHS 3 LEGACY_EXEDIR)
+		list(GET PATHS 4 LEGACY_3RDPDIR)
+		add_custom_target(cryptlib
+			${3RDP_GNU_MAKE} cryptlib DONT_CLOBBER_CC=please  ${BUILD_TYPE_FLAG}
+			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdp/build
+		)
+	endif()
 endif()
 
 add_executable(syncterm ${SOURCE})
-require_libs(syncterm xpdev ciolib uifc comio)
-
-target_include_directories(syncterm PRIVATE ../sbbs3)
-target_include_directories(syncterm PRIVATE ../smblib)
-
-if(NOT HAS_CRYPTLIB_H)
-    target_compile_definitions(syncterm PRIVATE WITHOUT_CRYPTLIB)
+require_libs(syncterm ciolib comio encode hash sftp uifc xpdev)
+if(WITHOUT_CRYPTLIB)
+	target_compile_definitions(syncterm PRIVATE WITHOUT_CRYPTLIB)
 else()
 	if(WIN32)
+		find_library(3RDP_CRYPTLIB_LIB cl32 PATHS ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/win32.release/cryptlib/bin NO_DEFAULT_PATH)
 		target_include_directories(syncterm PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/win32.release/cryptlib/include)
+		target_link_libraries(syncterm ${3RDP_CRYPTLIB_LIB})
+	else()
+		add_dependencies(syncterm cryptlib)
+		target_include_directories(syncterm PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/${LEGACY_3RDPDIR}/cl)
+		target_link_directories(syncterm PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../3rdp/${LEGACY_3RDPDIR}/cl)
+		target_link_libraries(syncterm cl)
 	endif()
 endif()
+
+target_include_directories(syncterm PRIVATE ../sbbs3)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
 	target_link_libraries(syncterm util)
@@ -91,5 +111,5 @@ endif()
 install(TARGETS syncterm DESTINATION bin)
 if(UNIX)
 	install(FILES syncterm.desktop DESTINATION share/applications)
-        install(FILES syncterm.png DESTINATION share/icons/hicolor/64x64/apps)
+	install(FILES syncterm.png DESTINATION share/icons/hicolor/64x64/apps)
 endif()
