--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(X11)
 if(NOT WIN32)
 	find_package(PkgConfig)
 	pkg_check_modules(SDL2 sdl2)
+	pkg_check_modules(PULSEAUDIO libpulse-simple)
+	pkg_check_modules(ALSA alsa)
 endif()
 
 set(SOURCE
@@ -96,17 +98,23 @@ target_link_libraries(xpdev ${CMAKE_DL_LIBS})
 
 CHECK_INCLUDE_FILES(inttypes.h HAS_INTTYPES_H)
 CHECK_INCLUDE_FILES(stdint.h HAS_STDINT_H)
-set(LINK_LIST_THREADSAFE TRUE PARENT_SCOPE)
+target_compile_definitions(xpdev PUBLIC LINK_LIST_THREADSAFE)
+if(HAS_INTTYPES_H)
+    target_compile_definitions(xpdev PUBLIC HAS_INTTYPES_H)
+endif()
+if(HAS_STDINT_H)
+    target_compile_definitions(xpdev PUBLIC HAS_STDINT_H)
+endif()
 
 CHECK_INCLUDE_FILES(sys/soundcard.h HAS_SYS_SOUNDCARD_H) 
 CHECK_INCLUDE_FILES(soundcard.h HAS_SOUNDCARD_H) 
 CHECK_INCLUDE_FILES(linux/inttypes.h HAS_LINUX_SOUNDCARD_H) 
 if(HAS_SYS_SOUNDCARD_H)
-    target_compile_definitions(xpdev PRIVATE SOUNDCARD_H_IN=1)
+    target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=1)
 elseif(HAS_SOUNDCARD_H)
-    target_compile_definitions(xpdev PRIVATE SOUNDCARD_H_IN=2)
+    target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=2)
 elseif(HAS_LINUX_SOUNDCARD_H)
-    target_compile_definitions(xpdev PRIVATE SOUNDCARD_H_IN=3)
+    target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=3)
 endif()
 
 CHECK_INCLUDE_FILES(dev/speaker/speaker.h HAS_DEV_SPEAKER_SPEAKER_H)
@@ -162,6 +170,7 @@ endif()
 if(SDL2_INCLUDE_DIRS)
 	target_include_directories(xpdev PUBLIC ${SDL2_INCLUDE_DIRS})
 	set(WITH_SDL_AUDIO TRUE PARENT_SCOPE)
+	target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
 endif()
 
 if(X11_FOUND)
@@ -184,9 +193,20 @@ endif()
 
 if(PORTAUDIO_FOUND)
 	target_include_directories(xpdev PRIVATE ${PORTAUDIO_INCLUDEDIR})
+	target_compile_definitions(xpdev PUBLIC WITH_PORTAUDIO)
 endif()
 
-CHECK_INCLUDE_FILES(alsa/asoundlib.h USE_ALSA_SOUND)
-if(USE_ALSA_SOUND)
-    target_compile_definitions(xpdev PRIVATE USE_ALSA_SOUND)
+if(PULSEAUDIO_FOUND)
+	target_include_directories(xpdev PUBLIC ${PULSEAUDIO_INCLUDE_DIRS})
+	target_compile_definitions(xpdev PUBLIC WITH_PULSEAUDIO)
+endif()
+
+if(ALSA_FOUND)
+	target_include_directories(xpdev PUBLIC ${ALSA_INCLUDE_DIRS})
+	target_compile_definitions(xpdev PUBLIC USE_ALSA_SOUND)
+else()
+	CHECK_INCLUDE_FILES(alsa/asoundlib.h USE_ALSA_SOUND)
+	if(USE_ALSA_SOUND)
+		target_compile_definitions(xpdev PUBLIC USE_ALSA_SOUND)
+	endif()
 endif()
