Make all listed build options optional in CMake builds
PC Speaker can't actually be disabled, so remove it from build options
listing.

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -2,8 +2,17 @@ project (ConIOLib C)
 
 cmake_minimum_required(VERSION 3.11)
 
+set(WITHOUT_GDI OFF CACHE BOOL "Disable GDI video support")
+set(WITHOUT_SDL OFF CACHE BOOL "Disable SDL video support")
+set(WITHOUT_X11 OFF CACHE BOOL "Disable X11 video support")
+set(WITHOUT_XRANDR OFF CACHE BOOL "Disable X11 video support")
+set(WITHOUT_XRENDER OFF CACHE BOOL "Disable X11 video support")
+set(WITHOUT_XINERAMA OFF CACHE BOOL "Disable X11 video support")
+
 INCLUDE (CheckFunctionExists)
-find_package(X11)
+if(NOT WITHOUT_X11)
+	find_package(X11)
+endif()
 # So on BSD, this causes the find to fail.  However, it's required for Linux
 # This is because on BSD, ncursesw.h does not exist, but libraries use
 # ncurses.h
@@ -12,12 +21,23 @@ find_package(Threads REQUIRED)
 if(NOT WIN32)
 	find_package(Curses)
 	find_package(PkgConfig)
-	pkg_check_modules(SDL2 sdl2)
-	pkg_check_modules(XRENDER xrender)
-	pkg_check_modules(XINERAMA xinerama)
-	pkg_check_modules(XRANDR xrandr)
+	if(NOT WITHOUT_SDL)
+		pkg_check_modules(SDL2 sdl2)
+	endif()
+	if(NOT WITHOUT_X11)
+		if(NOT WITHOUT_XRENDER)
+			pkg_check_modules(XRENDER xrender)
+		endif()
+		if(NOT WITHOUT_XINERAMA)
+			pkg_check_modules(XINERAMA xinerama)
+		endif()
+		if(NOT WITHOUT_XRANDR)
+			pkg_check_modules(XRANDR xrandr)
+		endif()
+	endif()
 endif()
 
+# TODO: Don't require allfonts.c when building without bitmap support
 set(SOURCE
 	allfonts.c
 	ansi_cio.c
@@ -28,7 +48,6 @@ set(SOURCE
 	syncicon64.c
 	utf8_codepages.c
 	vidmodes.c
-	xbr.c
 )
 
 set(HEADER
@@ -41,7 +60,10 @@ set(HEADER
 )
 
 if(WIN32)
-	list(APPEND SOURCE win32cio.c ciolib.rc)
+	if(NOT WITHOUT_GDI)
+		list(APPEND SOURCE win32cio.c)
+	endif()
+	list(APPEND SOURCE ciolib.rc)
 endif()
 
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
@@ -58,25 +80,29 @@ if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	endif()
 endif()
 
-if(X11_FOUND)
-	list(APPEND SOURCE x_events.c x_cio.c)
-	set(NEED_BITMAP TRUE)
-	set(NEED_DLOPEN TRUE)
-	set(NEED_SCALE TRUE)
+if(NOT WITHOUT_X1!)
+	if(X11_FOUND)
+		list(APPEND SOURCE x_events.c x_cio.c)
+		set(NEED_BITMAP TRUE)
+		set(NEED_DLOPEN TRUE)
+		set(NEED_SCALE TRUE)
+	endif()
 endif()
 
-if(SDL2_INCLUDE_DIRS)
-	list(APPEND SOURCE sdl_con.c)
-	list(APPEND SOURCE sdlfuncs.c)
-	set(NEED_SCALE TRUE)
-	if(WIN32)
-		list(APPEND SOURCE SDL_win32_main.c)
+if(NOT WITHOUT_SDL)
+	if(SDL2_FOUND)
+		list(APPEND SOURCE sdl_con.c)
+		list(APPEND SOURCE sdlfuncs.c)
+		set(NEED_SCALE TRUE)
+		if(WIN32)
+			list(APPEND SOURCE SDL_win32_main.c)
+		endif()
+		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+			list(APPEND SOURCE SDLMain.m)
+		endif()
+		set(NEED_BITMAP TRUE)
+		set(NEED_DLOPEN TRUE)
 	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-		list(APPEND SOURCE SDLMain.m)
-	endif()
-	set(NEED_BITMAP TRUE)
-	set(NEED_DLOPEN TRUE)
 endif()
 
 if(NEED_BITMAP)
@@ -84,7 +110,7 @@ if(NEED_BITMAP)
 endif()
 
 if(NEED_SCALE)
-	list(APPEND SOURCE scale.c)
+	list(APPEND SOURCE scale.c xbr.c)
 endif()
 
 add_library(ciolib OBJECT ${SOURCE})
@@ -96,28 +122,48 @@ if(CURSES_FOUND)
 	endif()
 endif()
 
-if(X11_FOUND)
-	target_include_directories(ciolib PRIVATE ${X11_INCLUDE_DIR})
-	if(XRENDER_FOUND)
-		target_compile_definitions(ciolib PUBLIC WITH_XRENDER)
+if(WITHOUT_X11)
+	target_compile_definitions(ciolib PRIVATE NO_X)
+	target_compile_definitions(ciolib PUBLIC DISABLE_X11=1)
+else()
+	if(X11_FOUND)
+		target_include_directories(ciolib PRIVATE ${X11_INCLUDE_DIR})
+		if(NOT WITHOUT_XRENDER)
+			if(XRENDER_FOUND)
+				target_compile_definitions(ciolib PUBLIC WITH_XRENDER)
+			endif()
+		endif()
+		if(NOT WITHOUT_XINERAMA)
+			if(XINERAMA_FOUND)
+				target_compile_definitions(ciolib PUBLIC WITH_XINERAMA)
+			endif()
+		endif()
+		if(NOT WITHOUT_XRANDR)
+			if(XRANDR_FOUND)
+				target_compile_definitions(ciolib PUBLIC WITH_XRANDR)
+			endif()
+		endif()
+	else()
+		target_compile_definitions(ciolib PRIVATE NO_X)
+		target_compile_definitions(ciolib PUBLIC DISABLE_X11=1)
+		message(WARNING "libx11 not found, X11 support disabled")
+		set(WITHOUT_X11 ON CACHE BOOL "Disable X11 video support")
 	endif()
-	if(XINERAMA_FOUND)
-		target_compile_definitions(ciolib PUBLIC WITH_XINERAMA)
+endif()
+
+if(NOT WITHOUT_SDL)
+	if(SDL2_FOUND)
+		target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
+		set(WITH_SDL TRUE PARENT_SCOPE)
+		target_compile_definitions(ciolib PUBLIC WITH_SDL)
 	endif()
-	if(XRANDR_FOUND)
-		target_compile_definitions(ciolib PUBLIC WITH_XRANDR)
+endif()
+
+if(WIN32)
+	if(NOT WITHOUT_GDI)
+		target_compile_definitions(ciolib PUBLIC WITH_GDI)
 	endif()
 else()
-	target_compile_definitions(ciolib PRIVATE NO_X)
-endif()
-
-if(SDL2_INCLUDE_DIRS)
-	target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
-	set(WITH_SDL TRUE PARENT_SCOPE)
-	target_compile_definitions(ciolib PUBLIC WITH_SDL)
-endif()
-
-if(NOT WIN32)
 	target_link_libraries(ciolib pthread)
 endif()
 
