--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -2,15 +2,26 @@ project (XPDev C)
 
 cmake_minimum_required(VERSION 3.11)
 
+set(WITHOUT_OSS OFF CACHE BOOL "Disable OSS Audio")
+set(WITHOUT_SDL_AUDIO OFF CACHE BOOL "Disable SDL Audio")
+set(WITHOUT_ALSA OFF CACHE BOOL "Disable ALSA Audio")
+set(WITHOUT_PORTAUDIO OFF CACHE BOOL "Disable PortAudio Audio")
+set(WITHOUT_PULSEAUDIO OFF CACHE BOOL "Disable PulseAudio Audio")
+
 INCLUDE (CheckIncludeFiles)
 INCLUDE (CheckFunctionExists)
 find_package(Threads)
-find_package(X11)
 if(NOT WIN32)
 	find_package(PkgConfig)
-	pkg_check_modules(SDL2 sdl2)
-	pkg_check_modules(PULSEAUDIO libpulse-simple)
-	pkg_check_modules(ALSA alsa)
+	if(NOT WITHOUT_SDL_AUDIO)
+		pkg_check_modules(SDL2 sdl2)
+	endif()
+	if(NOT WITHOUT_PULSEAUDIO)
+		pkg_check_modules(PULSEAUDIO libpulse-simple)
+	endif()
+	if(NOT WITHOUT_ALSA)
+		pkg_check_modules(ALSA alsa)
+	endif()
 endif()
 
 set(SOURCE
@@ -78,16 +89,18 @@ set(HEADER
 
 if(NOT WIN32)
 	list(APPEND SOURCE xpevent.c)
-    list(APPEND SOURCE xpsem.c)
+	list(APPEND SOURCE xpsem.c)
 endif()
 
-if(SDL2_INCLUDE_DIRS)
-	list(APPEND SOURCE sdlfuncs.c)
-	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-		list(APPEND SOURCE SDLMain.m)
-	endif()
-	if(WIN32)
-		list(APPEND SOURCE SDL_win32_main.c)
+if(NOT WITHOUT_SDL_AUDIO)
+	if(SDL2_INCLUDE_DIRS)
+		list(APPEND SOURCE sdlfuncs.c)
+		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+			list(APPEND SOURCE SDLMain.m)
+		endif()
+		if(WIN32)
+			list(APPEND SOURCE SDL_win32_main.c)
+		endif()
 	endif()
 endif()
 
@@ -106,28 +119,32 @@ if(HAS_STDINT_H)
     target_compile_definitions(xpdev PUBLIC HAS_STDINT_H)
 endif()
 
-CHECK_INCLUDE_FILES(sys/soundcard.h HAS_SYS_SOUNDCARD_H) 
-CHECK_INCLUDE_FILES(soundcard.h HAS_SOUNDCARD_H) 
-CHECK_INCLUDE_FILES(linux/inttypes.h HAS_LINUX_SOUNDCARD_H) 
-if(HAS_SYS_SOUNDCARD_H)
-    target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=1)
-elseif(HAS_SOUNDCARD_H)
-    target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=2)
-elseif(HAS_LINUX_SOUNDCARD_H)
-    target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=3)
+if(NOT WITHOUT_OSS)
+	CHECK_INCLUDE_FILES(sys/soundcard.h HAS_SYS_SOUNDCARD_H) 
+	CHECK_INCLUDE_FILES(soundcard.h HAS_SOUNDCARD_H) 
+	CHECK_INCLUDE_FILES(linux/soundcard.h HAS_LINUX_SOUNDCARD_H) 
+	if(HAS_SYS_SOUNDCARD_H)
+		target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=1)
+	elseif(HAS_SOUNDCARD_H)
+		target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=2)
+	elseif(HAS_LINUX_SOUNDCARD_H)
+		target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=3)
+	else()
+		target_compile_definitions(xpdev PUBLIC SOUNDCARD_H_IN=0)
+	endif()
 endif()
 
 CHECK_INCLUDE_FILES(dev/speaker/speaker.h HAS_DEV_SPEAKER_SPEAKER_H)
 if(HAS_DEV_SPEAKER_SPEAKER_H)
 	target_compile_definitions(xpdev PRIVATE HAS_DEV_SPEAKER_SPEAKER_H)
 endif()
-CHECK_INCLUDE_FILES(dev/machine/speaker.h HAS_DEV_MACHINE_SPEAKER_H)
-if(HAS_DEV_MACHINE_SPEAKER_H)
-	target_compile_definitions(xpdev PRIVATE HAS_DEV_MACHINE_SPEAKER_H)
+CHECK_INCLUDE_FILES(dev/machine/speaker.h HAS_MACHINE_SPEAKER_H)
+if(HAS_MACHINE_SPEAKER_H)
+	target_compile_definitions(xpdev PRIVATE HAS_MACHINE_SPEAKER_H)
 endif()
-CHECK_INCLUDE_FILES(dev/speaker/spkr.h HAS_DEV_MACHINE_SPKR_H)
-if(HAS_DEV_MACHINE_SPKR_H)
-	target_compile_definitions(xpdev PRIVATE HAS_DEV_MACHINE_SPKR_H)
+CHECK_INCLUDE_FILES(dev/speaker/spkr.h HAS_MACHINE_SPKR_H)
+if(HAS_MACHINE_SPKR_H)
+	target_compile_definitions(xpdev PRIVATE HAS_MACHINE_SPKR_H)
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
@@ -140,9 +157,15 @@ if(WIN32)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
 	target_link_libraries(xpdev network m)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
-	target_link_libraries(xpdev ossaudio m)
+	target_link_libraries(xpdev m)
+	if(NOT WITHOUT_OSS)
+		target_link_libraries(ossaudio)
+	endif()
 elseif(CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
-	target_link_libraries(xpdev ossaudio m)
+	target_link_libraries(xpdev m)
+	if(NOT WITHOUT_OSS)
+		target_link_libraries(ossaudio)
+	endif()
 elseif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
 	target_link_libraries(xpdev socket m)
 else()
@@ -167,46 +190,52 @@ if(HAS_SRANDOMDEV_FUNC)
 	target_compile_definitions(xpdev PRIVATE HAS_SRANDOMDEV_FUNC)
 endif()
 
-if(SDL2_INCLUDE_DIRS)
-	target_include_directories(xpdev PUBLIC ${SDL2_INCLUDE_DIRS})
-	set(WITH_SDL_AUDIO TRUE PARENT_SCOPE)
-	target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
-endif()
-
-if(X11_FOUND)
-	target_include_directories(xpdev PRIVATE ${X11_INCLUDE_DIR})
+if(NOT WITHOUT_SDL_AUDIO)
+	if(SDL2_FOUND)
+		target_include_directories(xpdev PUBLIC ${SDL2_INCLUDE_DIRS})
+		set(WITH_SDL_AUDIO TRUE PARENT_SCOPE)
+		target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
+	endif()
 endif()
 
 if (PKG_CONFIG_FOUND)
-	pkg_check_modules(PORTAUDIO2 portaudio-2.0)
-	if(PORTAUDIO2_FOUND)
-		set(PORTAUDIO_FOUND TRUE)
-		set(PORTAUDIO_LIBS PORTAUDIO2_LIBS)
-		set(PORTAUDIO_CFLAGS PORTAUDIO2_CFLAGS)
-	else()
-		find_path(PORTAUDIO_INCLUDEDIR portaudio.h)
-		if(PORTAUDIO_INCLUDEDIR)
+	if(NOT WITHOUT_PORTAUDIO)
+		pkg_check_modules(PORTAUDIO2 portaudio-2.0)
+		if(PORTAUDIO2_FOUND)
 			set(PORTAUDIO_FOUND TRUE)
+			set(PORTAUDIO_LIBS PORTAUDIO2_LIBS)
+			set(PORTAUDIO_CFLAGS PORTAUDIO2_CFLAGS)
+		else()
+			find_path(PORTAUDIO_INCLUDEDIR portaudio.h)
+			if(PORTAUDIO_INCLUDEDIR)
+				set(PORTAUDIO_FOUND TRUE)
+			endif()
 		endif()
 	endif()
 endif()
 
-if(PORTAUDIO_FOUND)
-	target_include_directories(xpdev PRIVATE ${PORTAUDIO_INCLUDEDIR})
-	target_compile_definitions(xpdev PUBLIC WITH_PORTAUDIO)
+if(NOT WITHOUT_PORTAUDIO)
+	if(PORTAUDIO_FOUND)
+		target_include_directories(xpdev PRIVATE ${PORTAUDIO_INCLUDEDIR})
+		target_compile_definitions(xpdev PUBLIC WITH_PORTAUDIO)
+	endif()
 endif()
 
-if(PULSEAUDIO_FOUND)
-	target_include_directories(xpdev PUBLIC ${PULSEAUDIO_INCLUDE_DIRS})
-	target_compile_definitions(xpdev PUBLIC WITH_PULSEAUDIO)
+if(NOT WITHOUT_PULSEAUDIO)
+	if(PULSEAUDIO_FOUND)
+		target_include_directories(xpdev PUBLIC ${PULSEAUDIO_INCLUDE_DIRS})
+		target_compile_definitions(xpdev PUBLIC WITH_PULSEAUDIO)
+	endif()
 endif()
 
-if(ALSA_FOUND)
-	target_include_directories(xpdev PUBLIC ${ALSA_INCLUDE_DIRS})
-	target_compile_definitions(xpdev PUBLIC USE_ALSA_SOUND)
-else()
-	CHECK_INCLUDE_FILES(alsa/asoundlib.h USE_ALSA_SOUND)
-	if(USE_ALSA_SOUND)
+if(NOT WITHOUT_ALSA)
+	if(ALSA_FOUND)
+		target_include_directories(xpdev PUBLIC ${ALSA_INCLUDE_DIRS})
 		target_compile_definitions(xpdev PUBLIC USE_ALSA_SOUND)
+	else()
+		CHECK_INCLUDE_FILES(alsa/asoundlib.h USE_ALSA_SOUND)
+		if(USE_ALSA_SOUND)
+			target_compile_definitions(xpdev PUBLIC USE_ALSA_SOUND)
+		endif()
 	endif()
 endif()
