Fixup NetBSD and OpenBSD builds
CMake is now fixed, and a NetBSD extra wait for key on exit with
the system curses is also fixed.

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -176,8 +176,19 @@ if(USE_CURSES_ANYWAY)
 		endif()
 		target_link_libraries(ciolib ${NCURSES_LIBRARIES})
 	else()
-		target_link_libraries(ciolib ${CURSES_NCURSES_LIBRARY})
-		target_link_libraries(ciolib ${CURSES_TINFO_LIBRARY_NAME})
+		if(NOT CURSES_NCURSES_LIBRARY)
+			target_link_libraries(ciolib ${CURSES_CURSES_LIBRARY})
+		else()
+			target_link_libraries(ciolib ${CURSES_NCURSES_LIBRARY})
+		endif()
+		if(CURSES_TINFO_LIBRARY_NAME)
+			if(NOT CURSES_NCURSES_HAS_CBREAK OR NOT CURSES_NCURSES_HAS_NODELAY)
+				find_library(CURSES_EXTRA_LIBRARY "${CURSES_TINFO_LIBRARY_NAME}")
+				if(CURSES_EXTRA_LIBRARY)
+					target_link_libraries(ciolib ${CURSES_TINFO_LIBRARY_NAME})
+				endif()
+			endif()
+		endif()
 	endif()
 endif()
 
