--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -159,12 +159,12 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Haiku")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
 	target_link_libraries(xpdev m)
 	if(NOT WITHOUT_OSS)
-		target_link_libraries(ossaudio)
+		target_link_libraries(xpdev ossaudio)
 	endif()
 elseif(CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
 	target_link_libraries(xpdev m)
 	if(NOT WITHOUT_OSS)
-		target_link_libraries(ossaudio)
+		target_link_libraries(xpdev ossaudio)
 	endif()
 elseif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
 	target_link_libraries(xpdev socket m)
