Initial stab at making the macOS cmake build work

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -90,15 +90,20 @@ if(NOT WITHOUT_X1!)
 endif()
 
 if(NOT WITHOUT_SDL)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+		if(NOT SDL2_FOUND)
+			find_library(SDL2_LIBRARY SDL2)
+			if(SDL2_LIBRARY)
+				set(SDL2_FOUND ON)
+			endif()
+		endif()
+	endif()
 	if(SDL2_FOUND)
 		list(APPEND SOURCE sdl_con.c)
 		list(APPEND SOURCE sdlfuncs.c)
 		set(NEED_SCALE TRUE)
 		if(WIN32)
 			list(APPEND SOURCE SDL_win32_main.c)
-		endif()
-		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-			list(APPEND SOURCE SDLMain.m)
 		endif()
 		set(NEED_BITMAP TRUE)
 		set(NEED_DLOPEN TRUE)
@@ -152,10 +157,20 @@ else()
 endif()
 
 if(NOT WITHOUT_SDL)
-	if(SDL2_FOUND)
-		target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
-		set(WITH_SDL TRUE PARENT_SCOPE)
-		target_compile_definitions(ciolib PUBLIC WITH_SDL)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+		if(SDL2_LIBRARY)
+			target_link_libraries(ciolib ${SDL2_LIBRARY})
+			target_include_directories(ciolib PUBLIC ${SDL2_LIBRARY}/Headers)
+			target_include_directories(ciolib PUBLIC ${SDL2_LIBRARY})
+			target_compile_definitions(ciolib PUBLIC STATIC_SDL)
+			target_compile_definitions(ciolib PUBLIC WITH_SDL)
+		endif()
+	else()
+		if(SDL2_FOUND)
+			target_include_directories(ciolib PUBLIC ${SDL2_INCLUDE_DIRS})
+			set(WITH_SDL TRUE PARENT_SCOPE)
+			target_compile_definitions(ciolib PUBLIC WITH_SDL)
+		endif()
 	endif()
 endif()
 
