--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -80,6 +80,11 @@ if(NOT WITHOUT_OOII)
 	list(APPEND SOURCE ooii.c ooii_bmenus.c ooii_cmenus.c ooii_logons.c ooii_sounds.c)
 endif()
 
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+	list(APPEND SOURCE DarwinWrappers.m)
+	find_library(FOUNDATION_LIBRARY Foundation)
+endif()
+
 if(NOT WITHOUT_CRYPTLIB)
 	list(APPEND SOURCE ssh.c telnets.c)
 	if(WIN32)
@@ -87,7 +92,14 @@ if(NOT WITHOUT_CRYPTLIB)
 	endif()
 endif()
 
-add_executable(syncterm ${SOURCE})
+add_executable(syncterm MACOSX_BUNDLE ${SOURCE})
+set_target_properties(syncterm PROPERTIES
+	MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist
+)
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+	target_sources(syncterm PRIVATE SyncTERM.icns)
+	set_source_files_properties(SyncTERM.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+endif()
 require_libs(syncterm ciolib comio encode hash sftp uifc xpdev)
 if(WITHOUT_OOII)
 	target_compile_definitions(syncterm PRIVATE WITHOUT_OOII=1)
@@ -116,6 +128,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
 	target_link_libraries(syncterm util)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 	target_link_libraries(syncterm util)
+	target_link_libraries(syncterm ${FOUNDATION_LIBRARY})
 endif()
 
 install(TARGETS syncterm DESTINATION bin)
