--- a/src/xpdev/CMakeLists.txt
+++ b/src/xpdev/CMakeLists.txt
@@ -1,6 +1,7 @@
 project (XPDev C)
 
 cmake_minimum_required(VERSION 3.11)
+include(CheckSymbolExists)
 
 set(WITHOUT_OSS OFF CACHE BOOL "Disable OSS Audio")
 set(WITHOUT_SDL_AUDIO OFF CACHE BOOL "Disable SDL Audio")
@@ -87,17 +88,24 @@ set(HEADER
 	xpsem.h
 )
 
+check_symbol_exists(strlcpy string.h HAS_STRLCPY)
+
 if(NOT WIN32)
 	list(APPEND SOURCE xpevent.c)
 	list(APPEND SOURCE xpsem.c)
 endif()
 
 if(NOT WITHOUT_SDL_AUDIO)
-	if(SDL2_INCLUDE_DIRS)
-		list(APPEND SOURCE sdlfuncs.c)
-		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-			list(APPEND SOURCE SDLMain.m)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+		if(NOT SDL2_FOUND)
+			find_library(SDL2_LIBRARY SDL2)
+			if(SDL2_LIBRARY)
+				set(SDL2_FOUND ON)
+			endif()
 		endif()
+	endif()
+	if(SDL2_FOUND)
+		list(APPEND SOURCE sdlfuncs.c)
 		if(WIN32)
 			list(APPEND SOURCE SDL_win32_main.c)
 		endif()
@@ -105,9 +113,16 @@ if(NOT WITHOUT_SDL_AUDIO)
 endif()
 
 add_library(xpdev OBJECT ${SOURCE})
+target_compile_features(xpdev PUBLIC c_std_11)
 target_include_directories(xpdev PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(xpdev PUBLIC ${XPDevPlus_BINARY_DIR})
 target_link_libraries(xpdev ${CMAKE_DL_LIBS})
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+	target_compile_definitions(xpdev PUBLIC __unix__ __DARWIN__ USE_SNPRINTF)
+endif()
+if(NOT WIN32)
+	target_compile_definitions(xpdev PUBLIC USE_XP_SEMAPHORES)
+endif()
 
 CHECK_INCLUDE_FILES(inttypes.h HAS_INTTYPES_H)
 CHECK_INCLUDE_FILES(stdint.h HAS_STDINT_H)
@@ -191,10 +206,20 @@ if(HAS_SRANDOMDEV_FUNC)
 endif()
 
 if(NOT WITHOUT_SDL_AUDIO)
-	if(SDL2_FOUND)
-		target_include_directories(xpdev PUBLIC ${SDL2_INCLUDE_DIRS})
-		set(WITH_SDL_AUDIO TRUE PARENT_SCOPE)
-		target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
+	if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+		if(SDL2_LIBRARY)
+			target_link_libraries(xpdev ${SDL2_LIBRARY})
+			target_include_directories(xpdev PUBLIC ${SDL2_LIBRARY}/Headers)
+			target_include_directories(xpdev PUBLIC ${SDL2_LIBRARY})
+			target_compile_definitions(xpdev PUBLIC STATIC_SDL)
+			target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
+		endif()
+	else()
+		if(SDL2_FOUND)
+			target_include_directories(xpdev PUBLIC ${SDL2_INCLUDE_DIRS})
+			set(WITH_SDL_AUDIO TRUE PARENT_SCOPE)
+			target_compile_definitions(xpdev PUBLIC WITH_SDL_AUDIO)
+		endif()
 	endif()
 endif()
 
@@ -238,4 +263,8 @@ if(NOT WITHOUT_ALSA)
 			target_compile_definitions(xpdev PUBLIC USE_ALSA_SOUND)
 		endif()
 	endif()
+endif()
+
+if(NOT HAS_STRLCPY)
+	target_compile_definitions(xpdev PUBLIC NEEDS_STRLCPY)
 endif()
